# FinalImd

./: CMakeLists.txt  FinalIMD.kdev4
.kdev4/: FinalIMD.kdev4
Predict_linear/: CMakeLists.txt  predict_linear.cpp
TrainML/: CMakeLists.txt  train.cpp
TrainML1/: CMakeLists.txt  train.cpp
TrainML2/: CMakeLists.txt  train.cpp
app/: app.xml
getData/: CMakeLists.txt  collectData.cpp
